--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -47,7 +47,7 @@
     <%= f.hidden_field :post_code, value: @order.post_code %><%= @order.post_code %><br>
     <%= f.hidden_field :address, value: @order.address %><%= @order.address %><br>
     <%= f.hidden_field :name, value: @order.name %><%= @order.name %>
-    <%= f.hidden_field :status, value: 0 %>
+    <%= f.hidden_field :status %>
   </p>
 
   <%= link_to '戻る', new_order_path, class: 'btn btn-secondary mr-2' %>
