新規登録もとに戻す

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,7 @@
             <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "注文履歴一覧", admin_items_path, class: "nav-link" %>
-          <!--↑注文履歴一覧へパス変更-->
+            <%= link_to "注文履歴一覧", admin_root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to 'ジャンル一覧', admin_genres_path, class: "nav-link" %>
@@ -95,14 +94,11 @@
   <div class="container mt-5">
     <div class="row">
       <div class="mx-auto">
-
         <% if admin_signed_in? %>
-          <%= link_to "管理者ページ", admin_items_path, class: "nav-link" %>
-          <!--↑注文履歴一覧へパス-->
+          <%= link_to "管理者ページ", admin_root_path, class: "nav-link" %>
         <% else %>
           <%= link_to "管理者ページ", admin_session_path, class: "nav-link" %>
         <% end %>
-
         <p>CopyRight 3bit.inc</p>
       </div>
     </div>
