--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -35,16 +35,29 @@
         <tbody>
           <tr>
             <th class="table-info">商品合計</th>
-            <td><%= (@order.total_price - @order.shipping_fee).to_s(:delimited) %></td>
+            <td>¥ <%= (@order.total_price).to_s(:delimited) %></td>
           </tr>
+          <% if @order.order_details.exists? %>
           <tr>
             <th class="table-info">配送料</th>
-            <td><%= postage = 800.to_s %></td>
+            <td>¥ <%= postage = 800.to_s %></td>
           </tr>
           <tr>
             <th class="table-info">ご請求額</th>
-            <td><%= @order.total_price.to_s(:delimited) %></td>
+            <td>¥ <%= number_with_delimiter(@order.total_price + @order.shipping_fee) %></td>
           </tr>
+          <% else %>
+          <tr>
+            <th class="table-info">配送料</th>
+            <td>¥ <%= postage = 0.to_s %></td>
+          </tr>
+          <tr>
+            <th class="table-info">ご請求額</th>
+            <td>¥ <%= postage = 0.to_s %></td>
+          </tr>
+          <% end %>
+
+
         </tbody>
       </table>
     </div>
@@ -64,9 +77,9 @@
       <% @order_details.each do |detail| %>
         <tr>
           <td><%= detail.item.name %></td>
-          <td><%= detail.purchase_price.floor.to_s(:delimited) %></td>
-          <td><%= detail.quantity %></td>
-          <td><%= (detail.purchase_price * detail.quantity).round.to_s(:delimited) %>
+          <td>¥ <%= detail.purchase_price.floor.to_s(:delimited) %></td>
+          <td><%= detail.quantity %> 個</td>
+          <td>¥ <%= (detail.purchase_price * detail.quantity).round.to_s(:delimited) %>
           </td>
         </tr>
       <% end %>
