--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -48,7 +48,7 @@
 
     </div>
     <div class="text-center">
-      <%= link_to "情報入力に進む", root_path, class: "btn btn-success"%>
+      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success"%>
     </div>
   </div>
 </div>
