--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,57 +1,28 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-      <table class="table table-borderless">
-         <thead>
-          <tr>
-           <th>ジャンル検索</th>
-          </tr>
-         </thead>
-         <tbody>
-          <% @genres.each do |genre| %>
-          <tr>
-           <td><%= genre.name %></td>
-          </tr>
-          <% end %>
-         </tbody>
-        </table>
-      <h2 class="mt-3">New book</h2>
-      フォーム
-    </div>
-    <div class='col-md-8 offset-md-1'>
-      <h2>Users</h2>
-      新着
-    </div>
-  </div>
-</div>
-
-
 <div class="container">
-    <div class="row">
+  <div class="row ml-5 mt-3">
 
-      <div class="col-2 mx-auto">
-        <table class="table table-borderless">
-         <thead>
+    <div class="col-2 text-nowrap">
+      <table class="table table-borderless">
+        <thead>
           <tr>
-           <th>ジャンル検索</th>
+            <th>ジャンル検索</th>
           </tr>
-         </thead>
-         <tbody>
+        </thead>
+        <tbody>
           <% @genres.each do |genre| %>
-          <tr>
-           <td><%= genre.name %></td>
-          </tr>
+            <tr>
+             <td><%= genre.name %></td>
+            </tr>
           <% end %>
-         </tbody>
-        </table>
-       </div>
+        </tbody>
+      </table>
+    </div>
 
-      <div class="col-md-2"></div>
-      <div class="col-md-8">
-        <div class="text-center mt-5">
-         <h1><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h1></span>
-          <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>
-         <div class="cakelogo">
+    <div class="col-10">
+      <div class="text-center mx-auto">
+        <h3><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h3></span>
+        <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>
+        <div class="cakelogo">
           <h4 class="cake-sentence">
             このサイトはケーキ販売の<br>
             ECサイトになります。<br>
@@ -60,32 +31,97 @@
             購入には会員登録が<br>
             必要になります。
           </h4>
-          </div>
         </div>
       </div>
-      <div class="col-md-2"></div>
     </div>
-  </div>
 
-  <div class="container mt-5">
-  <h2 class="text-center">🎉新着商品🎉</h2>
-  <div class="row">
-    <% 4.times do |i| %> <!-- 4つの画像を表示するための繰り返し処理 -->
-      <div class="col-md-3">
-        <div class="card">
-          <%= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>
-          <div class="card-body">
-            <h5 class="card-title">商品名:こだわりケーキ</h5>
-            <p class="card-text">価格: ¥10,000</p>
-          </div>
-        </div>
+      <div class="col-10">
+        <div class="d-flex">
+        <h2 style="padding: 10px"><mark>🎉新着商品🎉</mark></h2>
       </div>
-    <% end %>
+
+      <div class="d-flex align-content-start flex-wrap max-auto mb-2">
+        <% @items.each do |item| %>
+        <div class="item col-md-3　img-responsive">
+            <%= link_to item_path(item.id) do %>
+              <%=  image_tag item.get_image(200, 200) %>
+            <% end %>
+          <div class="item"><%= item.name %></div>
+          <div class="item">¥<%= item.price %></div>
+        </div>
+        <% end %>
+      </div>
+
+      <div class="col text-right mb-2">
+        <%= link_to '全ての商品を見る', items_path, class: 'btn btn-outline-secondary' %>
+      </div>
+
   </div>
 </div>
 
-<div class="container mt-5">
-  <div class="text-right">
-    <%= link_to '全ての商品を見る', items_path, class: 'btn btn-outline-secondary' %>
-  </div>
-</div>
+
+
+<!--元のやつ↓ジャンルレイアウトバグりました。。。すいません。。。-->
+<!--<div class="container">-->
+<!--  <div class="row　ml-5 mt-3">-->
+
+<!--      <div class="col-2 mx-auto">-->
+<!--        <table class="table table-borderless">-->
+<!--         <thead>-->
+<!--          <tr>-->
+<!--           <th>ジャンル検索</th>-->
+<!--          </tr>-->
+<!--         </thead>-->
+<!--         <tbody>-->
+<!--          <%# @genres.each do |genre| %>-->
+<!--          <tr>-->
+<!--           <td><%#= genre.name %></td>-->
+<!--          </tr>-->
+<!--          <%# end %>-->
+<!--         </tbody>-->
+<!--        </table>-->
+<!--       </div>-->
+<!--      </div>-->
+
+<!--      <div class="col-md-8">-->
+<!--        <div class="text-center mx-auto">-->
+<!--         <h3><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h3></span>-->
+<!--          <%#= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>-->
+<!--         <div class="cakelogo">-->
+<!--          <h4 class="cake-sentence">-->
+<!--            このサイトはケーキ販売の<br>-->
+<!--            ECサイトになります。<br>-->
+<!--            会員でない方も商品の<br>-->
+<!--            閲覧はできますが、<br>-->
+<!--            購入には会員登録が<br>-->
+<!--            必要になります。-->
+<!--          </h4>-->
+<!--        </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-md-2"></div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--  <div class="container mt-5">-->
+<!--  <h2 class="text-center">新着商品</h2>-->
+<!--  <div class="row">-->
+<!--    <%# 4.times do |i| %> <!-- 4つの画像を表示するための繰り返し処理 -->
+<!--      <div class="col-md-3">-->
+<!--        <div class="card">-->
+<!--          <%#= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>-->
+<!--          <div class="card-body">-->
+<!--            <h5 class="card-title">商品名:こだわりケーキ</h5>-->
+<!--            <p class="card-text">価格: ¥10,000</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    <%# end %>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<div class="container mt-5">-->
+<!--  <div class="text-right">-->
+<!--    <%#= link_to '全ての商品を見る', items_path, class: 'btn btn-outline-secondary' %>-->
+<!--  </div>-->
+<!--</div>-->
