--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
     <%= f.label :name, 'ジャンル名' %>
     <%= f.text_field :name %>
-    <%= f.submit "新規登録", class: "btn btn-success" %>
+    <%= f.submit "新規登録", class: "btn btn-outline-success" %>
 <% end %>
 
   <div class='row'>
@@ -20,7 +20,9 @@
           <tr>
             <td><%= genre.name %></td>
             <td>
-              <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
+              <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-outline-success" %>
+              <%= link_to "削除", admin_genre_path(genre.id), method: :delete,
+              data: { confirm: "本当に削除しますか？" }, class: "btn btn-outline-secondary ml-3" %>
             </td>
           </tr>
           <% end %>
