--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,57 +1,46 @@
-<div class="container">
-    <div class="row">
-
-      <div class="col-2 mx-auto">
-        <table class="table table-borderless">
-         <thead>
-          <tr>
-           <th>ジャンル検索</th>
-          </tr>
-         </thead>
-         <tbody>
-          <% @genres.each do |genre| %>
-          <tr>
-           <td><%= genre.name %></td>
-          </tr>
-          <% end %>
-         </tbody>
-        </table>
-       </div>
-
-      <div class="col-md-2"></div>
-      <div class="col-md-8">
-        <div class="text-center mt-5">
-         <h1><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h1></span>
-          <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>
-         <div class="cakelogo">
-          <h4 class="cake-sentence">
-            このサイトはケーキ販売の<br>
-            ECサイトになります。<br>
-            会員でない方も商品の<br>
-            閲覧はできますが、<br>
-            購入には会員登録が<br>
-            必要になります。
-          </h4>
-          </div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-3">
+      <div class="card">
+        <div class="card-header">
+          ジャンル検索
         </div>
+        <ul class="list-group list-group-flush">
+          <% @genres.each do |genre| %>
+          <li class="list-group-item">
+            <%= link_to genre.name, genre_path(genre.id), class: 'text-reset h5' %>
+          </li>
+          <% end %>
+        </ul>
       </div>
-      <div class="col-md-2"></div>
+    </div>
+
+    <div class="col-md-9">
+      <div class="text-center">
+        <h1 class="display-4" style="background-color: #FAF0E6; padding: 15px 0;">ようこそ、ながのCAKEへ！</h1>
+        <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid mb-4' %>
+        <p class="lead">
+          このサイトはケーキ販売のECサイトになります。<br>
+          会員でない方も商品の閲覧はできますが、購入には会員登録が必要になります。
+        </p>
+      </div>
     </div>
   </div>
+</div>
 
-  <div class="container mt-5">
-  <h2 class="text-center">🎉新着商品🎉</h2>
+<div class="container mt-5">
+  <h2 class="text-center mb-5">🎉 新着商品 🎉</h2>
   <div class="row">
     <% 4.times do |i| %> <!-- 4つの画像を表示するための繰り返し処理 -->
-      <div class="col-md-3">
-        <div class="card">
-          <%= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>
-          <div class="card-body">
-            <h5 class="card-title">商品名:こだわりケーキ</h5>
-            <p class="card-text">価格: ¥10,000</p>
-          </div>
+    <div class="col-md-3">
+      <div class="card mb-4 shadow-sm">
+        <%= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>
+        <div class="card-body">
+          <h5 class="card-title">商品名: こだわりケーキ</h5>
+          <p class="card-text">価格: ¥10,000</p>
         </div>
       </div>
+    </div>
     <% end %>
   </div>
 </div>
