--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,43 +1,37 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
-
-  <div class="col-2 mx-auto">
-    <table class="table table-borderless">
-     <thead>
-      <tr>
-       <th>ジャンル検索</th>
-      </tr>
-     </thead>
-     <tbody>
-      <% @genres.each do |genre| %>
-      <tr>
-       <td><%= genre.name %></td>
-      </tr>
-      <% end %>
-     </tbody>
-    </table>
-   </div>
-
-   <div class="col-md-10">
-
-      <h2>商品一覧</h2>
-      （全<%= @items.count %>件）
-      <div class="d-flex justify-content-start flex-wrap">
-      <% @items.each do |item| %>
-
-        <div>
-          <p>
-            <%= link_to item_path(item.id) do %>
-              <%=  image_tag item.get_image(200, 200) %>
-            <% end %>
-          </p>
-          <p><%= item.name %></p>
-          <p>¥<%= item.price %></p>
+    <div class="col-3">
+      <div class="card">
+        <div class="card-header">
+          ジャンル検索
         </div>
-
-      <% end %>
+        <ul class="list-group list-group-flush">
+          <% @genres.each do |genre| %>
+          <li class="list-group-item">
+            <%= link_to genre.name, genre_path(genre.id), class: 'text-reset h5' %>
+          </li>
+          <% end %>
+        </ul>
       </div>
+    </div>
 
+    <div class="col-md-9">
+      <h2>商品一覧 <small class="text-muted">（全 <%= @items.count %> 件）</small></h2>
+      <div class="row">
+        <% @items.each do |item| %>
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <%= link_to item_path(item.id) do %>
+              <%= image_tag item.get_image(200, 200), alt: item.name, class: 'card-img-top img-fluid' %>
+            <% end %>
+            <div class="card-body">
+              <h5 class="card-title"><%= item.name %></h5>
+              <p class="card-text">¥ <%= item.price %></p>
+            </div>
+          </div>
+        </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
