会員ごとの注文履歴一覧ページ追加

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -43,7 +43,7 @@
         </tr>
         <tr>
           <th style="width: 30%">注文履歴</th>
-          <td style="width: 40%"><%= link_to "一覧を見る", addresses_path, class: "btn btn-sm btn-primary" %></td>
+          <td style="width: 40%"><%= link_to "一覧を見る", orders_path, class: "btn btn-sm btn-primary" %></td>
         </tr>
       </table>
 
