--- a/app/views/admin/customers/orders.html.erb
+++ b/app/views/admin/customers/orders.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
-  <h2>注文履歴一覧</h2>
+  <h2><%= @customer.full_name %>さんの注文履歴</h2>
   <div class="row">
     <table class="table table-striped">
       <thead>
         <tr>
           <th>購入日時</th>
-          <th>購入者</th>
           <th>注文個数</th>
           <th>注文ステータス</th>
         </tr>
@@ -15,9 +14,6 @@
         <tr>
           <td>
             <%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), admin_order_path(order.id) %>
-          </td>
-          <td>
-            <%= link_to order.customer.full_name, admin_path(order.customer.id) %>
           </td>
           <td>
             <% quantity = 0%>
