almost_finish_genre_index_and_orders_index

--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -5,8 +5,8 @@
       <div class="col-md-4">
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title"><%= name %></h5>
-            <p class="card-text">価格: <%= price %>円</p>
+            <h5 class="card-title"><%= item.name %></h5>
+            <p class="card-text">価格: <%= item.price %>円</p>
           </div>
         </div>
       </div>
