--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
@@ -26,7 +21,7 @@
           </tr>
           <tr>
             <td>ジャンル</td>
-            <td><%= @item.genre.name %></td>
+            <td><%= @item.genre ? @item.genre.name : 'ジャンルが設定されていません' %></td>
           </tr>
           <tr>
             <td>税込価格<br>(税抜価格)</td>
