--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <h3 class="mt-1 mb-3">新規会員登録</h3>
     <div class="row g-3">
       <div class="col-md-6">
-        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.label :first_name, "(姓)", :class => "form-label" %>
         <%= f.text_field :first_name, autofocus: true, autocomplete: "First name", placeholder: "令和", :class => "form-control" %>
       </div>
