新規登録修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -63,8 +63,10 @@
       <%= f.submit "新規登録", :class => "btn btn-dark btn-lg btn-block" %>
     </div>
     <% end %>
+    <%= render "public/shared/links" %>
   </div>
 </div>
+
 
 
 <!--元のコード↓-->
