--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -2,14 +2,17 @@
   <h2><%= @genre.name %>の商品一覧</h2>
   <div class="row">
     <% @items.each do |item| %>
-      <div class="col-md-4">
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title"><%= item.name %></h5>
-            <p class="card-text">価格: <%= item.price %>円</p>
+      <div class="col-md-3 mb-4">
+          <div class="card">
+            <%= link_to item_path(item.id) do %>
+              <%= image_tag item.get_image(200, 200), alt: item.name, class: 'card-img-top img-fluid' %>
+            <% end %>
+            <div class="card-body">
+              <h5 class="card-title"><%= item.name %></h5>
+              <p class="card-text">¥ <%= number_with_delimiter(item.price, delimiter: ',') %></p>
+            </div>
           </div>
         </div>
-      </div>
     <% end %>
   </div>
 </div>
