--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -26,7 +26,7 @@
             <% end %>
             <div class="card-body">
               <h5 class="card-title"><%= item.name %></h5>
-              <p class="card-text">¥ <%= item.price %></p>
+              <p class="card-text">¥ <%= number_with_delimiter(item.price, delimiter: ',') %></p>
             </div>
           </div>
         </div>
