--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,6 @@
     <div class="row g-3">
       <div class="col-md-6">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%#= render "public/shared/error_messages", resource: resource %>
         <%= f.label :first_name, "(姓)", :class => "form-label" %>
         <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "令和", :class => "form-control" %>
       </div>
@@ -21,7 +20,7 @@
         <%= f.text_field :last_name_kana, autocomplete: "first_name_kana", placeholder: "ミチコ", :class => "form-control" %>
       </div>
       <div class="col-md-6">
-        <%= f.label :emai, "メールアドレス" %>
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autocomplete: "email", placeholder: "sample@example.com", :class => "form-control" %>
       </div>
     </div>
