ransack導入記述、検索機能はまだ使用できない

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,3 +1,9 @@
+<%= search_form_for @q do |f| %>
+    <%= f.label :name_cont %>
+    <%= f.search_field :name_cont %>
+    <%= f.submit %>
+<% end %>
+
 <div class="container mt-5">
   <div class="row">
     <div class="col-3">
