--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -33,3 +33,16 @@
     </div>
   </div>
 </div>
+
+<li class="nav-item col-md-4">
+            <%# if admin_signed_in? %>
+              <div class="search_form">
+                <%= form_with url: admin_search_path, local: true, method: :get, class: "d-flex" do |f| %>
+                  <%= f.text_field :word, class: "form-control me-2" %>
+                  <%= f.hidden_field :range, value: "商品"%> <!-- 商品しか検索できないように設定-->
+                  <%= f.hidden_field :search, value: "partial"%> <!-- 部分一致しかできないように設定-->
+                  <%= f.submit "検索", class: "btn btn-outline-success" %>
+                <% end %>
+              </div>
+            <%# end %>
+          </li>
