--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,21 +1,8 @@
-<!--修正済み-->
-
 <div class="container mt-5">
-    <div class="row mr-5">
+  <div class="row mr-5">
 
-     <div class="col-3">
-      <div class="card">
-        <div class="card-header">
-          ジャンル検索
-        </div>
-        <ul class="list-group list-group-flush">
-          <% @genres.each do |genre| %>
-          <li class="list-group-item">
-            <%= link_to genre.name, genre_path(genre.id), class: 'text-reset h5' %>
-          </li>
-          <% end %>
-        </ul>
-      </div>
+    <div class="col-3">
+      <%= render 'public/genres/genre', genres: @genres %>
     </div>
 
 
@@ -42,17 +29,7 @@
   <div class="container mt-5">
   <h2 class="text-center">🎉新着商品🎉</h2>
   <div class="row">
-    <% 4.times do |i| %> <!-- 4つの画像を表示するための繰り返し処理 -->
-      <div class="col-md-3">
-        <div class="card">
-          <%= image_tag "sample_product_#{i+1}.jpg", alt: "商品画像#{i+1}", class: 'card-img-top img-fluid' %>
-          <div class="card-body">
-            <h5 class="card-title">商品名:こだわりケーキ</h5>
-            <p class="card-text">価格: ¥10,000</p>
-          </div>
-        </div>
-      </div>
-    <% end %>
+    <%= render 'public/items/index', items: @items %>
   </div>
 </div>
 
@@ -61,5 +38,3 @@
     <%= link_to '全ての商品を見る', items_path, class: 'btn btn-outline-secondary' %>
   </div>
 </div>
-
-
