ヘッダー修正

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <%#= render 'layouts/errors', obj: @obj %>
+  <%= render 'layouts/errors', obj: @obj %>
 
   <h2>会員情報編集</h2>
 
