--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -4,7 +4,7 @@
       <%= render 'public/genres/genre', genres: @genres %>
     </div>
     <div class="col-md-9">
-      <h2>商品一覧 <small class="text-muted">（全 <%= items.count %> 件）</small></h2>
+      <h2>商品一覧 <small class="text-muted">（全 <%= @items.count %> 件）</small></h2>
       <%= render 'public/items/index', items: @items %>
     </div>
   </div>
