--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-9">
-      <h2>商品一覧 <small class="text-muted">（全 <%= items.count %> 件）</small></h2>
+      <h2>商品一覧 <small class="text-muted">（全 <%= @items.count %> 件）</small></h2>
       <%= render 'public/items/index', items: @items %>
     </div>
   </div>
