add_hover_function_only_customer

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,9 +1,10 @@
+
 <div class="container">
 
   <div class="row">
     <div class="col-md-10">
       <h2 class="ml-5 mb-3">注文履歴詳細</h2>
-      <table class="table table-borderless">
+      <table class="table table-borderless table-hover">
         <tr>
           <th style="width:200px" >購入者</th>
           <td><%= @order.customer.full_name %></td>
