--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 
 // おしゃれなフォントインストールしてみた　ここから
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap');
+
+
 
 li {
   list-style: none;
@@ -177,3 +179,38 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #007bff;
   color: white;
 }
+
+
+.block-hover {
+  transition: all 0.3s;
+}
+.block-hover:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+// ホバーする前はグレーの色だけどホバーすると元の色になる
+// .block-hover {
+//   transition: all 0.3s;
+//   filter: grayscale(100%);
+// }
+// .block-hover:hover {
+//   filter: grayscale(0%);
+//   transform: translateY(-5px);
+//   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+// }
+
+
+
+
+
+// hover回転エフェクト
+// .block-hover {
+//   transition: all 0.3s;
+//   transform-origin: center;
+// }
+// .block-hover:hover {
+//   transform: rotate(5deg);
+//   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+// }
+
