--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="mb-3">会員一覧</h1>
 
-<div class="table-responsive">
+<div class="table-responsive table-hover">
   <table class="table table-hover">
     <thead class="table-success">
       <tr>
