--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class='row'>
     <div class='col-md-4 pt-md-5'>
-      <table class='table'>
+      <table class='table table-hover'>
         <thead>
           <tr>
             <th>ジャンル</th>
