--- a/app/views/public/items/_index.html.erb
+++ b/app/views/public/items/_index.html.erb
@@ -1,6 +1,8 @@
+
+       
       <div class="row">
         <% items.each do |item| %>
-        <div class="col-md-3 mb-4">
+        <div class="col-md-3 mb-4 block-hover ">
           <div class="card">
             <%= link_to item_path(item.id) do %>
               <%= image_tag item.get_image(200, 200), alt: item.name, class: 'card-img-top img-fluid' %>
