topページ作成中

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,12 +1,11 @@
 <div class="container mt-5">
-  <div class="row mr-5">
+  <div class="row">
 
     <div class="col-3">
       <%= render 'public/genres/genre', genres: @genres %>
     </div>
-
-
-      <div class="col-md-8">
+    
+       <div>
         <div class="text-center mt-5">
          <h1><span style="background-color: #FAF0E6;">ようこそ、ながのCAKEへ！</h1></span>
           <%= image_tag 'toppagecake.png', alt: 'ながのケーキ', class: 'img-fluid'%>
@@ -22,7 +21,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2"></div>
+      
     </div>
   </div>
 
