--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,16 @@
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
           </li>
+          <li class="nav-item col-md-4">
+            <div class="search_form">
+              <%= form_with url: search_path, local: true, method: :get, class: "d-flex" do |f| %>
+                <%= f.text_field :word, class: "form-control me-2" %>
+                <%= f.hidden_field :range, value: "商品"%> <!-- 商品しか検索できないように設定-->
+                <%= f.hidden_field :search, value: "partial"%> <!-- 部分一致しかできないように設定-->
+                <%= f.submit "検索", class: "btn btn-outline-success" %>
+              <% end %>
+            </div>
+          </li>
         <% elsif admin_signed_in? %>
           <li class="nav-item">
             <%= link_to "商品一覧", admin_items_path, class: "nav-link" %>
@@ -35,6 +45,16 @@
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link" %>
           </li>
+          <li class="nav-item col-md-4">
+            <div class="search_form">
+              <%= form_with url: admin_search_path, local: true, method: :get, class: "d-flex" do |f| %>
+                <%= f.text_field :word, class: "form-control me-2" %>
+                <%= f.hidden_field :range, value: "商品"%> <!-- 商品しか検索できないように設定-->
+                <%= f.hidden_field :search, value: "partial"%> <!-- 部分一致しかできないように設定-->
+                <%= f.submit "検索", class: "btn btn-outline-success" %>
+              <% end %>
+            </div>
+          </li>
         <% else %>
           <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link" %>
@@ -48,18 +68,19 @@
           <li class="nav-item">
             <%= link_to "ログイン", new_customer_session_path, class: "nav-link" %>
           </li>
+          <li class="nav-item col-md-4">
+            <div class="search_form">
+              <%= form_with url: search_path, local: true, method: :get, class: "d-flex" do |f| %>
+                <%= f.text_field :word, class: "form-control me-2" %>
+                <%= f.hidden_field :range, value: "商品"%> <!-- 商品しか検索できないように設定-->
+                <%= f.hidden_field :search, value: "partial"%> <!-- 部分一致しかできないように設定-->
+                <%= f.submit "検索", class: "btn btn-outline-success" %>
+              <% end %>
+            </div>
+          </li>
         <% end %>
 
-          <li class="nav-item col-md-4">
-              <div class="search_form">
-                <%= form_with url: search_path, local: true, method: :get, class: "d-flex" do |f| %>
-                  <%= f.text_field :word, class: "form-control me-2" %>
-                  <%= f.hidden_field :range, value: "商品"%> <!-- 商品しか検索できないように設定-->
-                  <%= f.hidden_field :search, value: "partial"%> <!-- 部分一致しかできないように設定-->
-                  <%= f.submit "検索", class: "btn btn-outline-success" %>
-                <% end %>
-              </div>
-          </li>
+          
 
         </ul>
       </div>
