トップ画像編集

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
-<div>
-  <%= image_tag 'top.jpeg' , class: 'top_image' %>
-</div>
+
+<%= image_tag 'top.jpeg' , class: 'img-responsive' %>
+
 
 <div class="container">
   <div class="text-center mt-5">
