--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -101,7 +101,7 @@
 
 
                       <hr class="my-4">
-                        <%= f.submit "精算を続ける", class: "w-100 btn btn-secondary btn-lg", type: "submit" %>
+                        <%= f.submit "精算を続ける", class: "w-100 btn btn-success btn-lg", type: "submit" %>
                         <% end %>
                                 </div>
                               </div>
