--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#fff0f5">
     <a class="navbar-brand" href="#"><%=link_to image_tag("header_logo.png"), "/" %></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto text-nowrap">
         <% if customer_signed_in? %>
-          <p class="navbar-text-dark mr-5">ようこそ <%= current_customer.first_name %> さん！</p>
+          <h4 class="navbar-text-dark d-flex align-items-center mr-5">ようこそ <strong><%= current_customer.first_name %></strong> さん！</h4>
           <li class="nav-item">
             <%= link_to customers_my_page_path, class: "nav-link" do %>
               <i class="fas fa-user-circle fa-lg" style="color: #f5cab3;"></i> マイページ
