--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="d-flex justify-content-between mb-3">
     <h2>ショッピングカート</h2>
     <%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete, class: "btn btn-danger"%>
