--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -51,7 +51,7 @@
   </p>
 
   <%= link_to '戻る', new_order_path, class: 'btn btn-secondary mr-2' %>
-  <%= f.submit '注文を確定する', class: 'btn btn-primary' %>
+  <%= f.submit '注文を確定する', class: 'btn btn-success' %>
 </div>
 
 <% end %>
