--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,10 +1,10 @@
-<h1 class="text-center add-font mt-4">注文履歴画面</h1>
+<div class="text-center mb-5"></div>
 
 <div class="container add-font">
-  <h2 class="order-history-title">注文履歴一覧</h2>
+  <h2 class="font-weight-bold col-3 ml-4 mb-4">注文履歴一覧</h2>
   <div class="table-responsive">
-    <table class="table custom-table">
-      <thead class="thead">
+    <table class="table">
+      <thead class="thead table-danger">
         <tr>
           <th>注文日</th>
           <th>配送先</th>
@@ -14,7 +14,7 @@
           <th>注文詳細</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="table table-striped">
         <% @orders.each do |order| %>
           <tr>
             <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
@@ -32,7 +32,7 @@
             <td><%= order.status_i18n %></td>
             <td>
               <div class="d-flex justify-content-center">
-                <%= link_to "表示する", order_path(order.id), class: 'btn btn-secondary' %>
+                <%= link_to "表示する", order_path(order.id), class: 'btn btn-info' %>
               </div>
             </td>
           </tr>
