--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mb-5">注文履歴詳細画面</h1>
+<div class="text-center mb-5"></div>
 
 <div class="container show-font">
   <h2 class="font-weight-bold col-3 ml-4 mb-4">注文履歴詳細</h2>
@@ -7,11 +7,11 @@
       <h4 class="font-weight-bold mt-4">注文情報 </h4>
       <table class="table table-bordered table-striped">
         <tr>
-          <th class="table-info col-2">注文日</th>
+          <th class="table-danger col-2">注文日</th>
           <td><%= @order.created_at.strftime("%Y/%m/%d ") %></td>
         </tr>
         <tr>
-          <th class="table-info">発送先</th>
+          <th class="table-danger">発送先</th>
           <td>
             <%= "〒"+@order.post_code %><br>
             <%= @order.address %><br>
@@ -19,11 +19,11 @@
           </td>
         </tr>
         <tr>
-          <th class="table-info">支払方法</th>
+          <th class="table-danger">支払方法</th>
           <td><%= @order.payment_method_i18n  %></td>
         </tr>
         <tr>
-          <th class="table-info">ステータス</th>
+          <th class="table-danger">ステータス</th>
           <td><%= @order.status_i18n  %></td>
         </tr>
       </table>
@@ -34,25 +34,25 @@
       <table class="table table-bordered table-striped">
         <tbody>
           <tr>
-            <th class="table-info">商品合計</th>
+            <th class="table-danger">商品合計</th>
             <td>¥ <%= (@order.total_price).to_s(:delimited) %></td>
           </tr>
           <% if @order.order_details.exists? %>
           <tr>
-            <th class="table-info">配送料</th>
+            <th class="table-danger">配送料</th>
             <td>¥ <%= postage = 800.to_s %></td>
           </tr>
           <tr>
-            <th class="table-info">ご請求額</th>
+            <th class="table-danger">ご請求額</th>
             <td>¥ <%= number_with_delimiter(@order.total_price + @order.shipping_fee) %></td>
           </tr>
           <% else %>
           <tr>
-            <th class="table-info">配送料</th>
+            <th class="table-danger">配送料</th>
             <td>¥ <%= postage = 0.to_s %></td>
           </tr>
           <tr>
-            <th class="table-info">ご請求額</th>
+            <th class="table-danger">ご請求額</th>
             <td>¥ <%= postage = 0.to_s %></td>
           </tr>
           <% end %>
@@ -63,10 +63,10 @@
     </div>
   </div>
 
-  <h4 class="mt-5">注文内容</h4>
+  <h4 class="font-weight-bold mt-4">注文内容</h4>
   <table class="table table-bordered table-striped col-10">
     <thead>
-      <tr class="table-info">
+      <tr class="table-danger">
         <th class="col-3">商品名</th>
         <th class="col-1">単価（税込）</th>
         <th class="col-1">個数</th>
