--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,4 +1,7 @@
 <div class='container px-5 px-sm-0'>
+  <div class="row">
+    <%= render 'layouts/errors', obj: @genre %>
+  </div>
 <h4>ジャンル一覧・追加</h4>
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
     <%= f.label :name, 'ジャンル名' %>
