--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,4 +1,7 @@
 <div class='container px-5 px-sm-0'>
+  <div class="row">
+    <div class="mx-auto"><%= render 'layouts/errors', obj: @item %></div>
+  </div>
   <div class='row'>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
       <h4>商品編集</h4>
