--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,6 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
+    <div class='mx-auto'><%= render 'layouts/errors', obj: @item %></div>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
       <h3>商品新規登録</h3>
       <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
