--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render 'layouts/errors', obj: @address %>
   <h2>配送先登録 / 一覧</h2>
   <div class="row">
     <%= form_with model:@address, url: addresses_path, method: :post do |f| %>
