レイアウト調整

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,8 +1,10 @@
+<div class="text-center mb-5"></div>
+
 <div class="container">
-  <h2>注文履歴一覧</h2>
+  <h3 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">注文履歴一覧</h3>
   <div class="row">
     <table class="table table-striped table-hover">
-      <thead>
+      <thead class="table-danger">
         <tr>
           <th>購入日時</th>
           <th>購入者</th>
