--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div>
     <table class="table table-bordered" >
-      <thead>
+      <thead class="table-danger">
         <tr>
           <th>商品名</th>
           <th>単価（税込）</th>
