--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,8 +1,10 @@
+<div class="text-center mb-5"></div>
+
 <div class = "container" >
   <div class = "row" >
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
-      <h1>マイページ</h1>
+      <h2 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">マイページ</h2>
 
       <div class="d-flex flex-row">
         <p class="mr-2"><strong>登録情報</p></strong>
