--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -1,9 +1,9 @@
 
 <div class="container">
   <h1 class="my-4">注文情報確認</h1>
-  
+
   <table class="confirmation-table">
-    <thead>
+    <thead class="table-danger">
       <%#= @order.payment_method_i18n %>
       <tr>
         <th>商品名</th>
