--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,9 +1,11 @@
+<div class="text-center mb-5"></div>
+
 <div class="container">
-  <h1 class="mb-3">会員一覧</h1>
+  <h3 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">会員一覧</h3>
 
 <div class="table-responsive table-hover">
   <table class="table table-hover">
-    <thead class="table-success">
+    <thead class="table-danger">
       <tr>
         <th scope="col">会員ID</th>
         <th scope="col">氏名</th>
