--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,8 +1,12 @@
-<div class='container px-5 px-sm-0'>
+<div class="text-center mb-5"></div>
+
+<div class="container add-font">
   <div class="row">
     <%= render 'layouts/errors', obj: @genre %>
   </div>
-<h4>ジャンル一覧・追加</h4>
+
+<h2 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">ジャンル一覧・追加</h2>
+<div class="text-center mb-5"></div>
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
     <%= f.label :name, 'ジャンル名' %>
     <%= f.text_field :name %>
@@ -12,7 +16,7 @@
   <div class='row'>
     <div class='col-md-4 pt-md-5'>
       <table class='table table-hover'>
-        <thead>
+        <thead class="thead table-danger">
           <tr>
             <th>ジャンル</th>
             <th colspan="2"></th>
@@ -25,7 +29,7 @@
             <td>
               <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-outline-success" %>
               <%= link_to "削除", admin_genre_path(genre.id), method: :delete,
-              data: { confirm: "本当に削除しますか？" }, class: "btn btn-outline-secondary ml-3" %>
+              data: { confirm: "本当に削除しますか？" }, class: "btn btn-outline-danger ml-3" %>
             </td>
           </tr>
           <% end %>
