ヘッダーようこそゲスト追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
             </div>
           </li>
           <% else %>
+          <h4 class="navbar-text-dark d-flex align-items-center mr-5">ようこそ <strong>ゲスト</strong> さん！</h4>
           <li class="nav-item">
             <%= link_to about_path, class: "nav-link" do %>
             <i class="fas fa-address-card fa-lg" style="color: #f5cab3;"></i> About
@@ -100,6 +101,7 @@
           </li>
 
         <% else %>
+          <h4 class="navbar-text-dark d-flex align-items-center mr-5">ようこそ <strong>ゲスト</strong> さん！</h4>
           <li class="nav-item">
             <%= link_to about_path, class: "nav-link" do %>
             <i class="fas fa-address-card fa-lg" style="color: #f5cab3;"></i> About
